# AuraHub

./: .cursorrules  .gitignore  CMakeLists.txt  MEMEX_ERRORS.md  README.md  auracloud_users.json
client/: CMakeLists.txt
client/include/auraclient/gui/: action_log_table_model.h  main_window.h
client/include/auraclient/model/: action_log_entry.h  approval_entry.h  ilocal_db_service.h  local_db_service.h  local_db_service_qt.h  mcp_engine.h  network_gateway.h
client/include/auraclient/mvp/: aura_presenter.h  iaura_presenter.h  iaura_view.h
client/include/mcp_assistant/app/: application.h
client/include/mcp_assistant/chat/: chat_delegate.h  chat_message.h  chat_messages_model.h
client/include/mcp_assistant/checkpoint/: checkpoint_list_model.h  checkpoint_manager.h  checkpoint_record.h
client/include/mcp_assistant/mcp/: imcp_transport.h  mcp_client.h  stdio_mcp_transport.h  websocket_mcp_transport.h
client/include/mcp_assistant/models/: chat_roles.h
client/include/mcp_assistant/services/: assistant_session_controller.h  pending_change.h
client/include/mcp_assistant/views/: main_window.h
client/include/mcp_assistant/widgets/: diff_preview_widget.h
client/include/mcp_assistant/workspace/: workspace_root.h
client/resources/: mcp_assistant.qrc
client/resources/themes/: dark.qss
client/src/: main.cpp  mcp_host_main.cpp
client/src/gui/: action_log_table_model.cpp  main_gui.cpp  main_window.cpp
client/src/mcp_assistant/: main.cpp
client/src/mcp_assistant/app/: application.cpp
client/src/mcp_assistant/chat/: chat_delegate.cpp  chat_messages_model.cpp
client/src/mcp_assistant/checkpoint/: checkpoint_list_model.cpp  checkpoint_manager.cpp
client/src/mcp_assistant/mcp/: mcp_client.cpp  stdio_mcp_transport.cpp  websocket_mcp_transport.cpp
client/src/mcp_assistant/services/: assistant_session_controller.cpp
client/src/mcp_assistant/views/: main_window.cpp
client/src/mcp_assistant/widgets/: diff_preview_widget.cpp
client/src/model/: local_db_service.cpp  local_db_service_qt.cpp  mcp_engine.cpp  network_gateway.cpp
client/src/mvp/: aura_presenter.cpp
cmake/patches/: userver_v2.14_aura_yaml_scalar_fixes.patch
docs/: AGENT_APPROVAL_WALKTHROUGH.md  ARCHITECTURE.md  DATABASES.md  LOCAL_DEV.md  MCP_CLIENT_UI_ARCHITECTURE.md  MEMEX_ERRORS.md
mcp/: CMakeLists.txt
mcp/include/auramcp/: tool_registry.h  tool_result.h
mcp/include/auramcp/jsonrpc/: json_rpc_parser.h  router.h
mcp/include/auramcp/transport/: stdio_transport.h
mcp/src/: stdio_server_main.cpp  stdio_transport.cpp  test_mcp_agent_main.cpp  tool_registry.cpp  tool_result.cpp
mcp/src/jsonrpc/: json_rpc_parser.cpp  router.cpp
scripts/: build_all.sh  build_server.sh  demo_agent_approval.sh  run_tests.sh  test_mcp_agent_stdio.sh
server/: CMakeLists.txt
server/configs/: static_config.yaml
server/dev/: docker-compose.yml
server/include/auracloud/services/: auth_service.h  llm_gateway.h  sync_service.h
server/include/auracloud/userver/: password_hasher.h
server/postgres/init/: 001_schema.sql
server/src/: main.cpp
server/src/services/: auth_service.cpp  llm_gateway.cpp  sync_service.cpp
server/src/userver/: main.cpp  password_hasher.cpp
server/src/userver/handlers/: auth_login.cpp  auth_register.cpp  llm_proxy.cpp  settings.cpp
tests/: CMakeLists.txt
tests/src/: mcp_jsonrpc_test.cpp  mcp_registry_test.cpp  mcp_router_test.cpp
